[gd_scene load_steps=7 format=2]

[ext_resource path="res://on-site.gd" type="Script" id=1]
[ext_resource path="res://main-sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://stall.tscn" type="PackedScene" id=3]
[ext_resource path="res://egg-coop.tscn" type="PackedScene" id=4]
[ext_resource path="res://ingredient-entity.tscn" type="PackedScene" id=5]
[ext_resource path="res://pork-butcher.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node"]
script = ExtResource( 1 )

[node name="Caldo-player" parent="." instance=ExtResource( 2 )]
position = Vector2( 219, 486 )
z_index = 1

[node name="Coop" parent="." instance=ExtResource( 4 )]
position = Vector2( 228, 308 )

[node name="Stall-area" parent="." instance=ExtResource( 3 )]
position = Vector2( 509, 301 )

[node name="ingredient-drop" parent="." instance=ExtResource( 5 )]
position = Vector2( 34, 58 )

[node name="Butcher" parent="." instance=ExtResource( 6 )]
position = Vector2( 57, 543 )

[connection signal="coop_entered" from="Coop" to="." method="_on_Coop_coop_entered"]
[connection signal="ingredient_freed" from="ingredient-drop" to="." method="_on_ingredientdrop_ingredient_freed"]
[connection signal="butcher_entered" from="Butcher" to="." method="_on_Butcher_butcher_entered"]
